--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,7 +23,7 @@ book:
     - Week_2.qmd
     - Week_3.qmd
     - Week_4.qmd
-    - project_conclusion.qmd
+    - Conclusion.qmd
 
 format:
   html:
